--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -18,6 +18,8 @@
 {% if error %}
 	<h1> Error : {{ error }} </h1>
 {% endif %}
+
+{% include 'navbar.html' %}
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
