--- a/login/templates/dashboard.html
+++ b/login/templates/dashboard.html
@@ -1,8 +1,13 @@
+<html>
+<head>
+
 <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+</head>
+<body>
+{% include 'navbar.html' %}
 <div class="container">
   <div class="row">
     <div class="span2">
@@ -10,32 +15,21 @@
     </div>
     <div class="span4">
       <blockquote>
-          {{ form }}
-
-
-        <p>Bruce Wayne</p>
-        <small><cite title="Source Title">Gotham, United Kingdom  <i class="icon-map-marker"></i></cite></small>
+         Username : <p>{{ username }}</p>
+      {% if is_seller %}
+        <p> Seller </p>
+        {% else %}
+        <p> Buyer </p>
+      {% endif %}
       </blockquote>
       <p>
-        <i class="icon-envelope"></i> masterwayne@batman.com <br>
-        <i class="icon-globe"></i> www.bootsnipp.com <br>
-        <i class="icon-gift"></i> January 30, 1974
+       First Name : <i class="icon-male"></i> <b> {{ first_name }} </b> <br>
+       Last Name: <i class="icon-male"> </i> <b> {{ last_name }} </b> <br>
+        Email : <i class="icon-envelope"></i> <b> {{ user_email }} </b> <br>
+       User Description <i class="icon-comment"></i> {{ user_description }} <br>
       </p>
     </div>
-
-    <div class="span2">
-      <img src="http://thetransformedmale.files.wordpress.com/2011/06/bruce-wayne-armani.jpg"  alt="" class="img-rounded">
-    </div>
-    <div class="span4">
-      <blockquote>
-        <p>Bruce Wayne</p>
-        <small><cite title="Source Title">Gotham, United Kingdom  <i class="icon-map-marker"></i></cite></small>
-      </blockquote>
-      <p>
-        <i class="icon-envelope"></i> masterwayne@batman.com <br>
-        <i class="icon-globe"></i> www.bootsnipp.com <br>
-        <i class="icon-gift"></i> January 30, 1974
-      </p>
     </div>
   </div>
-</div>
+</body>
+</html>
