--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -15,11 +15,10 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'login/css/mystyle.css' %}">
 </head>
 <body>
-{% if error %}
-	<h1> Error : {{ error }} </h1>
-{% endif %}
-
 {% include 'navbar.html' %}
+{% if error %}
+	<h1 style="color: red"> Error : {{ error }} </h1>
+{% endif %}
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
