--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -5,17 +5,19 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Register Form</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'register/css/mystyle.css' %} ">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-	<link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Passion+One'>
-	<link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Oxygen'>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
-	<div class="container">
+<div>
+{% include 'header.html' %}
+	</div>
+<br>
+<br>
+<br>
+<br>
+<br><br><br><br>
+<div>
+	<div class="container" style="background-color:aqua;">
 		<div class="row main">
 			<div class="panel-heading">
 				<div class="panel-title text-center">
@@ -155,8 +157,10 @@
 			</div>
 		</div>
 	</div>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="{% static 'js/myjs.js' %}"></script>
+{% include 'footer.html' %}
 </body>
 </html>
