--- a/login/templates/header.html
+++ b/login/templates/header.html
@@ -71,7 +71,7 @@
 							<i class="fa fa-bars"></i>
 						</div>
 						<ul class="main-menu" style="background-color:#6bf442;">
-							<li><a href=" ">Home</a></li>
+							<li><a href="/">Home</a></li>
 							<li><a href="/property/view_property/">FEATURED LISTING</a></li>
 							<li><a href="about.html">ABOUT US</a></li>
 							<li><a href="single-list.html">Pages</a></li>
